# supGeckoASM

./: LICENSE  MANIFEST.in  README.md  setup.cfg
src/supGeckoASM/: cli.py
src/supGeckoASM/include/: macros.inc
src/supGeckoASM/ldscript/: NTSC-J_1.1.ld  common.ld
src/supSMSASM/: cli.py
src/supSMSASM/ldscript/: GMSE01.ld  GMSJ01.ld  GMSJ0A.ld  GMSP01.ld  NTSC-J_1.0.ld  NTSC-J_1.1.ld  NTSC-U.ld  PAL.ld  common.ld
