[metadata]
name = supSMSASM
version = 0.0.7
author = sup39
author_email = sms@sup39.dev
description = A tool to make Gecko code from ASM for SMS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sup39/supSMSASM
license = MIT
project_urls =
  Bug Tracker = https://github.com/sup39/supSMSASM/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: Microsoft :: Windows

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
  pywin32 >= 304

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  supSMSASM = supSMSASM.cli:main
